--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 APP_ENV="prod"
 LOG_DIR="/var/log/kirill/go-terminal-api/"
 GIN_MODE=
+
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_URI=${DB_USERNAME}:${DB_PASSWORD}@tcp(${DB_HOST}:${DB_PORT})/
